cluster-tenants/namespace-app-id-dev1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: appid-dev1
  labels:
    environment: dev1
    team: "xyz_team"
    appid: UNIQUEID
  annotations:
    description: "Namespace for UNIQUEID services"
