cluster-tenants/namespace-app-id-dev1/netpol-denyall.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: appid-dev1   # Replace with your target namespace
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
